--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -4,6 +4,30 @@
     display: block
     width: 100%
     height: 100%
+
+.custom-tab-link-bar
+  width: 100%
+  display: flex
+  justify-content: space-between
+  button
+    width: calc(100% / 2)
+    margin: 0px!important
+    border-radius: 0px!important
+
+.link-bar-indicator-container
+  width: 100%
+  height: 3px
+  background-color: #fff
+  padding-bottom: 10px
+  position: relative
+  .indicator
+    width: 50%
+    height: 3px
+    position: absolute
+    top: 0
+    background-color: #4056b5
+
+
 .pf-container
   @media (min-width: $x-small-devices) and (max-width: $small-devices)
     max-width: 100vw
@@ -56,6 +80,7 @@
       height: 900px
       margin-right: 10px!important
       margin-bottom: 20px
+      background-color: #ffffff
       .first-block
         display: flex
         flex-direction: column
@@ -75,6 +100,7 @@
       width: 100%
       height: 900px
       overflow: auto
+      background-color: #fff
 
 .mat-form-field, button
   margin: 5px 0
