--- a/src/app/professionals/components/professional-form/professional-form.component.html
+++ b/src/app/professionals/components/professional-form/professional-form.component.html
@@ -56,17 +56,16 @@
                           maxlength="8"
                           formControlName="dni"
                           [matAutocomplete]="auto">
-                          <mat-spinner matSuffix [color]="spinnerColor" [diameter]="20" *ngIf="dniShowSpinner"></mat-spinner>
+                        
+                        <mat-spinner matSuffix [color]="spinnerColor" [diameter]="20" *ngIf="dniShowSpinner"></mat-spinner>
 
                         <mat-autocomplete #auto="matAutocomplete">
-                          <mat-option *ngFor="let patient of patientSearch" (onSelectionChange)="completePatientInputs(patient)"  [value]="patient.dni">
-                            {{patient.lastName}} {{patient.firstName}} DNI {{patient.dni}}
+                          <mat-option (onSelectionChange)="completePatientInputs(patientSearch)" *ngIf="patientSearch?._id" [value]="patientSearch.dni">
+                            {{patientSearch.lastName}} {{patientSearch.firstName}} DNI {{patientSearch.dni}}
                           </mat-option>
                         </mat-autocomplete>
 
                         <mat-hint align="end">{{dni.value.length}} / 8</mat-hint>
-                        
-                        <mat-hint *ngIf="">Nuevo paciente temporal</mat-hint>
 
                         <mat-error *ngIf="patientDni.errors?.required">
                           Debe ingresar el dni del paciente
