--- a/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
+++ b/src/app/professionals/components/prescriptions-list/prescriptions-list.component.html
@@ -100,7 +100,7 @@
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+          <tr mat-row [@rowsAnimation]="" *matRowDef="let row; columns: displayedColumns;"
             class="element-row"
             [class.expanded-row]="expandedElement === row"
             (click)="expandedElement = expandedElement === row ? null : row">
