improve prescriptions list table

--- a/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
+++ b/src/app/pharmacists/components/pharmacists-form/pharmacists-form.component.html
@@ -54,7 +54,7 @@
 
 
     <div class="prescription-panel">
-      <app-prescription-list [prescriptions]="prescriptions"></app-prescription-list>
+      <app-prescription-list></app-prescription-list>
     </div>
 
     <div class="insurance-panel">
