--- a/src/app/pharmacists/components/prescription-list/prescription-list.component.html
+++ b/src/app/pharmacists/components/prescription-list/prescription-list.component.html
@@ -6,79 +6,113 @@
     </h2>
   </mat-card-title>
   <mat-card-content>
-    <div class="prescriptions-container mat-elevation-z8">
-      <mat-table #table [dataSource]="dataSource">
 
-        <!-- Professional -->
-        <ng-container matColumnDef="user">
-          <mat-header-cell *matHeaderCellDef> Profesional </mat-header-cell>
-          <mat-cell *matCellDef="let prescription"> {{prescription.professional.businessName }} </mat-cell>
-        </ng-container>
 
-        <!-- Date -->
-        <ng-container matColumnDef="date">
-          <mat-header-cell *matHeaderCellDef> Fecha </mat-header-cell>
-          <mat-cell *matCellDef="let prescription"> {{prescription.date | date :'dd/MM/y' }} </mat-cell>
-        </ng-container>
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtrar por paciente o fecha">
+    </mat-form-field>
 
-        <!-- Status -->
-        <ng-container matColumnDef="status">
-          <mat-header-cell *matHeaderCellDef> Estado </mat-header-cell>
-          <mat-cell *matCellDef="let prescription" [style.color]="isStatus(prescription, 'Vencida') ? 'red': '#000000de'"> {{prescription.status}} </mat-cell>
-        </ng-container>
+    <div class="container mat-elevation-z8">
+      <div class="table-container" *ngIf="!loadingPrescriptions">
+        <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 
-        <!-- Supply count-->
-        <ng-container matColumnDef="supplies">
-          <mat-header-cell *matHeaderCellDef> Insumos </mat-header-cell>
-          <mat-cell *matCellDef="let prescription">
-            <mat-chip-list>
-              <mat-chip>{{prescription.supplies.length}}</mat-chip>
-            </mat-chip-list>
-          </mat-cell>
-        </ng-container>
+          <!-- Professional Column -->
+          <ng-container matColumnDef="professional">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Profesional </th>
+            <td mat-cell *matCellDef="let element" class='title-cell' test data-label='Profeeional'> {{ element.professional.businessName.toUpperCase() }}</td>
+          </ng-container>
 
-        <!-- Acción -->
-        <ng-container matColumnDef="action">
-          <mat-header-cell *matHeaderCellDef> Acción </mat-header-cell>
-          <mat-cell *matCellDef="let prescription">
-              <button mat-button matTooltip="Imprimir" *ngIf="canPrint(prescription)" (click)="printPrescription(prescription)" matTooltipPosition="above">
-                <mat-icon >print</mat-icon>
+          <!-- Date -->
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+            <td mat-cell *matCellDef="let element" class='m-card-sub-title' data-label='Fecha'> {{element.date | date : 'dd/MM/yyyy' }} </td>
+          </ng-container>
+
+          <!-- Status -->
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
+            <td mat-cell *matCellDef="let element" class='has_label_on_mobile' data-label='Estado:' [style.color]="isStatus(element, 'Vencida') ? 'red': '#000000de'"> {{ element.status }} </td>
+          </ng-container>
+
+          <!-- Insumos Column -->
+          <ng-container matColumnDef="supplies">
+            <th mat-header-cell *matHeaderCellDef> Insumos </th>
+            <td mat-cell *matCellDef="let element" class='has_label_on_mobile' data-label='Insumos:'> {{element.supplies.length}} </td>
+          </ng-container>
+
+          <!-- Accion Column -->
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Acción </th>
+            <td mat-cell *matCellDef="let element" (click)="$event.stopPropagation()" class="actions-cell">
+              <button mat-menu-item [matMenuTriggerFor]="menu" class="menu-collapse" *ngIf="!isStatus(element, 'Vencida')">
+                <mat-icon>more_vert</mat-icon>
               </button>
-            <div *ngIf="prescription.status === 'Pendiente'">
-              <button mat-button color="primary" (click)="dispense(prescription)" matTooltip="Dispensar" matTooltipPosition="above"><mat-icon >done_outline</mat-icon></button>
+              <mat-menu #menu="matMenu">
+
+                <button mat-menu-item type="button" *ngIf="canPrint(element)" (click)="printPrescription(element)">
+                  <mat-icon>print</mat-icon>
+                  <span>Imprimir receta</span>
+                </button>
+                <button mat-menu-item type="button" *ngIf="canDispense(element)" (click)="dispense(element)">
+                  <mat-icon>done_outline</mat-icon>
+                  <span>Dispensar receta</span>
+                </button>
+              </mat-menu>
+
+              <div fxLayout="row" class="action-buttons">
+                <button mat-menu-item type="button" *ngIf="canPrint(element)" (click)="printPrescription(element)" matTooltip="Imprimir" matTooltipPosition="above">
+                  <mat-icon>print</mat-icon>
+                </button>
+                <button mat-menu-item type="button" *ngIf="canDispense(element)" (click)="dispense(element)" matTooltip="Dispensar" matTooltipPosition="above">
+                  <mat-icon>done_outline</mat-icon>
+                </button>
+              </div>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="arrow">
+            <th mat-header-cell *matHeaderCellDef> </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-menu-item type="button">
+                <mat-icon [@arrowDirection]="element._id == expandedElement?._id ? 'up' : 'down'">expand_more</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+
+          <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+          <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+              <div class="element-detail" [@detailExpand]="element._id == expandedElement?._id ? 'expanded' : 'collapsed'">
+              <div class="element-diagram">
+                <div class="supplies-list">
+                  <div class="supply-description" *ngFor="let supp of element.supplies">
+                    <span>{{ supp.supply.name }}</span> <mat-chip>{{ supp.quantity }}</mat-chip>
+                  </div>
+                </div>
+                <div class="element-description" *ngIf="element.diagnostic"> <span class="description-title"> Diagnóstico:</span> {{element.diagnostic}} </div>
+                <div class="element-description" *ngIf="element.observation"> <span class="description-title">Observaciones:</span> {{element.observation}} </div>
+              </div>
             </div>
-          </mat-cell>
-        </ng-container>
+            </td>
+          </ng-container>
 
-        <!-- Expanded Content Column - Supplies details-->
-        <ng-container matColumnDef="expandedDetail">
-          <mat-cell *matCellDef="let detail">
-            <div fxLayout="column" fxLayoutAlign="space-around start">
-              <div *ngFor="let supp of detail.element.supplies">
-                {{ supp.supply.name }} <mat-chip>{{ supp.quantity }}</mat-chip>
-              </div>
-              <div class="description" *ngIf="detail.element.diagnostic ">
-                <span class="title">Diagnóstico:</span> {{detail.element.diagnostic }}
-              </div>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+            class="element-row"
+            [class.expanded-row]="expandedElement === row"
+            (click)="expandedElement = expandedElement === row ? null : row">
+          </tr>
+          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row"></tr>
 
-              <div class="description" *ngIf="detail.element.observation">
-                <span class="title">Observaciones:</span> {{detail.element.observation}}
-              </div>
-            </div>
-          </mat-cell>
-        </ng-container>
-
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"
-                matRipple
-                class="element-row border"
-                [class.expanded]="expandedElement == row"
-                (click)="expandedElement = row"></mat-row>
-        <mat-row *matRowDef="let row; columns: ['expandedDetail']; when: isExpansionDetailRow"
-                [@detailExpand]="row.element == expandedElement ? 'expanded' : 'collapsed'"
-                style="overflow: hidden">
-        </mat-row>
-      </mat-table>
+        </table>
+      </div>
+      <div fxLayout="row" fxLayoutAlign="center" class="loading-prescriptions" *ngIf="loadingPrescriptions">
+        <mat-spinner matSuffix color="primary" [diameter]="40"></mat-spinner>
+      </div>
+      <mat-paginator [pageSizeOptions]="[10, 20, 30]"></mat-paginator>
     </div>
+
+
+
   </mat-card-content>
 </mat-card>
