fixed  filter placeholder and filter param

--- a/src/app/pharmacists/components/prescription-list/prescription-list.component.html
+++ b/src/app/pharmacists/components/prescription-list/prescription-list.component.html
@@ -11,7 +11,7 @@
 
 
     <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtrar por paciente o fecha">
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtrar por fecha">
     </mat-form-field>
 
     <div class="container mat-elevation-z8">
