--- a/src/app/pharmacists/components/prescription-undo/prescription-undo.component.html
+++ b/src/app/pharmacists/components/prescription-undo/prescription-undo.component.html
@@ -1,1 +1,11 @@
-<button mat-menu-item type="button" *ngIf="counter > 0">{{counter | formatTime}}</button>
+<button mat-menu-item class="cancel-dispense" type="button" *ngIf="counter > 0">
+  <div class="timer-indicator">
+
+    <mat-spinner class="track" mode="determinate" value="100" diameter="35"></mat-spinner>
+    <mat-progress-spinner mode="determinate" value="{{progress}}" diameter="35"></mat-progress-spinner>
+
+    <div class="count-down-timer" [innerHTML]="counter | formatTime"></div>
+    <div class="tt-indicator">{{typeTime}}</div>
+  </div>
+
+</button>
