fix width panel on medium and large screen

--- a/src/app/professionals/components/professional-form/professional-form.component.sass
+++ b/src/app/professionals/components/professional-form/professional-form.component.sass
@@ -74,6 +74,9 @@
             mat-form-field
               width: calc((100% - 20px) / 2)
 
+    .my-prescriptions-panel
+      width: 100%!important
+
   @media (min-width: $x-small-devices) and (max-width: $small-devices)
     flex-direction: row!important
     width: calc((100vw * 2) - (5px * 2) )!important
