fix control of cancel dispense only if the prescription was dispensed by the same pharmacist

--- a/src/app/pharmacists/components/prescription-list/prescription-list.component.html
+++ b/src/app/pharmacists/components/prescription-list/prescription-list.component.html
@@ -69,7 +69,7 @@
                   <mat-icon>done_outline</mat-icon>
                 </button>
 
-                <app-prescription-undo *ngIf="canCounter(element)" [dispensedAt]="element.dispensedAt" [lapseTime]="lapseTime"></app-prescription-undo>
+                <app-prescription-undo *ngIf="canCounter(element)" [dispensedAt]="element.dispensedAt" [prescriptionId]="element._id" [lapseTime]="lapseTime" (cancelDispenseEvent)="cancelDispense($event)"></app-prescription-undo>
               </div>
             </td>
           </ng-container>
