adds animations to cancel dispense button

--- a/src/app/pharmacists/components/prescription-undo/prescription-undo.component.html
+++ b/src/app/pharmacists/components/prescription-undo/prescription-undo.component.html
@@ -1,5 +1,5 @@
-<button mat-menu-item class="cancel-dispense" type="button" *ngIf="counter > 0" (click)="cancelDispense(prescriptionId)">
-  <div class="timer-indicator">
+<button mat-menu-item class="cancel-dispense" type="button" *ngIf="counter > 0" (click)="cancelDispense(prescriptionId)" matTooltip="Anular dispensa" matTooltipPosition="above" (mouseenter)="showtimes = !showtimes" (mouseleave)="showtimes = !showtimes">
+  <div class="timer-indicator" [@hidetimer]="showtimes ? 'show' : 'hide'">
 
     <mat-spinner class="track" mode="determinate" value="100" diameter="35"></mat-spinner>
     <mat-progress-spinner mode="determinate" value="{{progress}}" diameter="35"></mat-progress-spinner>
@@ -7,5 +7,5 @@
     <div class="count-down-timer">{{ counter | formatTime }}</div>
     <div class="tt-indicator">{{typeTime}}</div>
   </div>
-
+  <mat-icon color="warn" [@showcancel]="!showtimes ? 'show' : 'hide'">highlight_off</mat-icon>
 </button>
