--- a/src/app/pharmacists/components/prescription-undo/prescription-undo.component.sass
+++ b/src/app/pharmacists/components/prescription-undo/prescription-undo.component.sass
@@ -6,7 +6,7 @@ button.cancel-dispense
   width: 65px
   padding: 0
   .timer-indicator
-    position: relative
+    position: absolute
     width: 100%
 
     mat-progress-spinner, mat-spinner
@@ -25,5 +25,13 @@ button.cancel-dispense
       top: 50%
       right: 0
       transform: translateY(-50%)
+  mat-icon
+    margin: 0
+    position: absolute
+    left: 50%
+    transform: translate(-50%, 50%)
+    height: 32px
+    width: 32px
+    font-size: 2rem
 
 
